# 2-stage-IRP-GPU

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  GITHUB_SETUP_GUIDE.md  Genetic.cpp  Genetic.h  Individu.cpp  Individu.h  LocalSearch.cpp  LocalSearch.h  LotSizingSolver.cpp  Makefile  MatrixSolver.cpp  MatrixSolver.h  OUPolicySolver.cpp  OUPolicySolver.h  Params.cpp  Params.h  ParamsList.cpp  ParamsList.h  Population.cpp  Population.h  README copy.md  README-CN.md  README.md  Rng.cpp  Rng.h  ScenarioUtils.cpp  ScenarioUtils.h  ThreadPool.cpp  ThreadPool.h  batch_run_log.txt  commandline.cpp  commandline.h  del.py  deletefile.py  environment.yml  final_long.sh  final_short.sh  final_slurm-batch-script-long.sh  (+17 more)
Data/: rename.py
Data/Big/Istanze0105/tradeoff/: STbks-abs1n15_4_veh-5_rou-1  STbks-abs1n15_4_veh-5_rou-10  STbks-abs1n15_4_veh-5_rou-100  STbks-abs1n15_4_veh-5_rou-11  STbks-abs1n15_4_veh-5_rou-12  STbks-abs1n15_4_veh-5_rou-13  STbks-abs1n15_4_veh-5_rou-14  STbks-abs1n15_4_veh-5_rou-15  STbks-abs1n15_4_veh-5_rou-16  STbks-abs1n15_4_veh-5_rou-17  STbks-abs1n15_4_veh-5_rou-18  STbks-abs1n15_4_veh-5_rou-19  STbks-abs1n15_4_veh-5_rou-2  STbks-abs1n15_4_veh-5_rou-20  STbks-abs1n15_4_veh-5_rou-21  STbks-abs1n15_4_veh-5_rou-22  STbks-abs1n15_4_veh-5_rou-23  STbks-abs1n15_4_veh-5_rou-24  STbks-abs1n15_4_veh-5_rou-25  STbks-abs1n15_4_veh-5_rou-26  STbks-abs1n15_4_veh-5_rou-27  STbks-abs1n15_4_veh-5_rou-28  STbks-abs1n15_4_veh-5_rou-29  STbks-abs1n15_4_veh-5_rou-3  STbks-abs1n15_4_veh-5_rou-30  STbks-abs1n15_4_veh-5_rou-31  STbks-abs1n15_4_veh-5_rou-32  STbks-abs1n15_4_veh-5_rou-33  STbks-abs1n15_4_veh-5_rou-34  STbks-abs1n15_4_veh-5_rou-35  STbks-abs1n15_4_veh-5_rou-36  STbks-abs1n15_4_veh-5_rou-37  STbks-abs1n15_4_veh-5_rou-38  STbks-abs1n15_4_veh-5_rou-39  STbks-abs1n15_4_veh-5_rou-4  STbks-abs1n15_4_veh-5_rou-40  STbks-abs1n15_4_veh-5_rou-41  STbks-abs1n15_4_veh-5_rou-42  STbks-abs1n15_4_veh-5_rou-43  STbks-abs1n15_4_veh-5_rou-44  (+160 more)
Data/Small/Istanze001005h3/cputime/: STbks-abs1n10_1_veh-2_rou-10000000  STbks-abs1n10_2_veh-3_rou-10000000  STbks-abs1n10_3_veh-4_rou-10000000  STbks-abs1n10_4_veh-5_rou-10000000  STbks-abs1n15_1_veh-2_rou-10000000  STbks-abs1n15_2_veh-3_rou-10000000  STbks-abs1n15_3_veh-4_rou-10000000  STbks-abs1n15_4_veh-5_rou-10000000  STbks-abs1n20_1_veh-2_rou-10000000  STbks-abs1n20_2_veh-3_rou-10000000  STbks-abs1n20_3_veh-4_rou-10000000  STbks-abs1n20_4_veh-5_rou-10000000  STbks-abs1n25_1_veh-2_rou-10000000  STbks-abs1n25_2_veh-3_rou-10000000  STbks-abs1n25_3_veh-4_rou-10000000  STbks-abs1n25_4_veh-5_rou-10000000  STbks-abs1n30_1_veh-2_rou-10000000  STbks-abs1n30_2_veh-3_rou-10000000  STbks-abs1n30_3_veh-4_rou-10000000  STbks-abs1n30_4_veh-5_rou-10000000  STbks-abs1n35_1_veh-2_rou-10000000  STbks-abs1n35_2_veh-3_rou-10000000  STbks-abs1n35_3_veh-4_rou-10000000  STbks-abs1n35_4_veh-5_rou-10000000  STbks-abs1n40_1_veh-2_rou-10000000  STbks-abs1n40_2_veh-3_rou-10000000  STbks-abs1n40_3_veh-4_rou-10000000  STbks-abs1n40_4_veh-5_rou-10000000  STbks-abs1n45_1_veh-2_rou-10000000  STbks-abs1n45_2_veh-3_rou-10000000  STbks-abs1n45_3_veh-4_rou-10000000  STbks-abs1n45_4_veh-5_rou-10000000  STbks-abs1n50_1_veh-2_rou-10000000  STbks-abs1n50_2_veh-3_rou-10000000  STbks-abs1n50_3_veh-4_rou-10000000  STbks-abs1n50_4_veh-5_rou-10000000  STbks-abs1n5_1_veh-2_rou-10000000  STbks-abs1n5_2_veh-3_rou-10000000  STbks-abs1n5_3_veh-4_rou-10000000  STbks-abs1n5_4_veh-5_rou-10000000  (+360 more)
Data/Small/Istanze001005h6/result/: STbks-abs1n10_1_veh-2_rou-100  STbks-abs1n10_1_veh-2_rou-1000000  STbks-abs1n10_1_veh-2_rou-125  STbks-abs1n10_1_veh-2_rou-150  STbks-abs1n10_1_veh-2_rou-175  STbks-abs1n10_1_veh-2_rou-200  STbks-abs1n10_1_veh-2_rou-225  STbks-abs1n10_1_veh-2_rou-25  STbks-abs1n10_1_veh-2_rou-250  STbks-abs1n10_1_veh-2_rou-275  STbks-abs1n10_1_veh-2_rou-300  STbks-abs1n10_1_veh-2_rou-50  STbks-abs1n10_1_veh-2_rou-75  STbks-abs1n10_2_veh-3_rou-100  STbks-abs1n10_2_veh-3_rou-1000000  STbks-abs1n10_2_veh-3_rou-125  STbks-abs1n10_2_veh-3_rou-150  STbks-abs1n10_2_veh-3_rou-175  STbks-abs1n10_2_veh-3_rou-200  STbks-abs1n10_2_veh-3_rou-225  STbks-abs1n10_2_veh-3_rou-25  STbks-abs1n10_2_veh-3_rou-250  STbks-abs1n10_2_veh-3_rou-275  STbks-abs1n10_2_veh-3_rou-300  STbks-abs1n10_2_veh-3_rou-75  STbks-abs1n10_3_veh-4_rou-100  STbks-abs1n10_3_veh-4_rou-1000000  STbks-abs1n10_3_veh-4_rou-150  STbks-abs1n10_3_veh-4_rou-175  STbks-abs1n10_3_veh-4_rou-200  STbks-abs1n10_3_veh-4_rou-25  (+2877 more)
Data/Small/tradeoff/: STbks-0_veh-1_rou-100  STbks-0_veh-1_rou-200  STsol-0_veh-1_rou-100  STsol-0_veh-1_rou-200
Params_list/: Params-4-gurobi.cpp
Program/: AlgorithmParameters.cpp  AlgorithmParameters.h  Genetic.cpp  Individual.cpp  Individual.h  LocalSearch.cpp  LocalSearch.h  Params.cpp  Params.h  Population.cpp  Split.cpp  Split.h  SplitCUDA.cu  SplitCUDA.h  commandline.h  main2.cpp  main_cuda.cpp
anpy/: an.py  performance.py  rec1  rec1 copy  rec1 copy 2  rec2  rec2old  test.sh
baseline/: gen_mps.py  verify.py
build_cuda/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  bin  cmake_install.cmake  hgs  hgs_cuda  logfile.txt
build_cuda/Test/Test-c/: CTestTestfile.cmake  Makefile  cmake_install.cmake  lib_test_c
docs/: architecture.md  module_guide.md
examples/: basic_run.sh
rpc/: CMakeLists.txt  GRPC_SETUP.md  README_GRPC.md  client.cpp  gpu_data.py  gpu_main.py  gpu_readme.md  gpu_solver.py  irp.grpc.pb.cc  irp.grpc.pb.h  irp.pb.cc  irp.pb.h  irp.proto  irp_pb2.py  irp_pb2_grpc.py  readme.md  resource_manager.py  server.py  start_server.sh  test_client.py  test_grpc.py
scripts/: build.sh  check_dependencies.sh  gpu_server_ctl.sh  install_dependencies.sh  run.sh  run_scenarios.sh  setup_conda_env.sh
src/core/: Genetic.cpp  Individu.cpp  Population.cpp
src/model/: Client.cpp  Noeud.cpp  Params.cpp  ParamsList.cpp  Route.cpp  Vehicle.cpp
src/search/: LocalSearch.cpp  Mutations.cpp
src/solver/: LinearPiece.cpp  LotSizingSolver.cpp  OUPolicySolver.cpp  PLFunction.cpp
src/utils/: EnhancedDemandGenerator.cpp  Rng.cpp  ScenarioUtils.cpp  ThreadPool.cpp  commandline.cpp
(+4561 files in other folders)
